--- a/main.html
+++ b/main.html
@@ -10,6 +10,26 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
+	<table>
+		<thead>
+		  <tr>
+			<th>roll number</th>
+			  <th>name</th>
+		  </tr>
+	    </thead>
+		<tbody>
+			<tr>
+				<td>1</td>
+				<td>Devang</td>
+			</tr>
+		</tbody>
+		<tbody>
+			<tr>
+				<td>2</td>
+				<td>Gaurang</td>
+			</tr>
+		</tbody>
+	</table>
 
 </body>
 
