--- a/main.html
+++ b/main.html
@@ -11,20 +11,23 @@
     <script type="text/javascript" src="./script.js">
 </script>
 	<table>
-		<thead>
-		  <tr>
-			<th>roll number</th>
-			  <th>name</th>
-		  </tr>
-	    </thead>
-		<tbody>
-			<tr>
-				<td></td>
-				<td></td>
-			</tr>
-		</tbody>
-		
-	</table>
+  <thead>
+    <tr>
+      <th>Roll Number</th>
+      <th>Name</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td>001</td>
+      <td>John Smith</td>
+    </tr>
+    <tr>
+      <td>002</td>
+      <td>Jane Doe</td>
+    </tr>
+  </tbody>
+</table>
 
 </body>
 
